--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Poppins:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
+    <meta
+      name="news_keywords"
+      content="compra e venda de livros usados; livros usados; livros em segunda mão"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
