feat: added meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
       name="news_keywords"
       content="compra e venda de livros usados; livros usados; livros em segunda mão"
     />
+    <meta name="description" content="Compra e venda de livros em segunda mão.">
+    <meta name="keywords" content="compra e venda de livros usados livros usados livros em segunda mão">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
