fix: add script

--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,14 @@
       name="news_keywords"
       content="compra e venda de livros usados; livros usados; livros em segunda mão"
     />
-    <meta name="description" content="Compra e venda de livros em segunda mão.">
-    <meta name="keywords" content="compra e venda de livros usados livros usados livros em segunda mão">
+    <meta
+      name="description"
+      content="Compra e venda de livros em segunda mão."
+    />
+    <meta
+      name="keywords"
+      content="compra e venda de livros usados livros usados livros em segunda mão"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -37,6 +43,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Venda de livros</title>
+    <script
+      src="https://mail-app-images.s3.eu-west-2.amazonaws.com/js/form.js"
+      data-uuid="f451d104-8313-4ab1-891f-d19ed0561675"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
