--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
     -->
     <title>Venda de livros</title>
     <script
+      async
       src="https://mail-app-images.s3.eu-west-2.amazonaws.com/js/form.js"
       data-uuid="f451d104-8313-4ab1-891f-d19ed0561675"
     ></script>
