--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,20 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Venda de livros</title>
-   
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-9HFW1RNT07"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-9HFW1RNT07");
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
