--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Os melhores livros aos melhores preços."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
