added icon and meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,14 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta property="og:image" content="%PUBLIC_URL%/favicon.ico">
     <link
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Poppins:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
     <meta
       name="news_keywords"
-      content="compra e venda de livros usados; livros usados; livros em segunda mão"
+      content="compra e venda de livros usados; livros usados; livros em segunda mão;"
     />
     <meta
       name="description"
@@ -19,7 +20,7 @@
     />
     <meta
       name="keywords"
-      content="compra e venda de livros usados livros usados livros em segunda mão"
+      content="compra e venda de livros usados livros usados livros em segunda mão literatura portuguesa livrospt"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
